--- a/style.css
+++ b/style.css
@@ -292,16 +292,9 @@ nav .dropdown-content a {
 }
 
 .about .wrapped {
-    width: 80%;
+    width: 60%;
     display: flex;
     margin: auto;
-    align-items: center;
-    gap: 30px;
-}
-
-.about .keys {
-    width: 100%;
-    max-width: 200px;
 }
 
 .about .container {
@@ -328,6 +321,7 @@ nav .dropdown-content a {
     width: 400px;
 }
 
+
 @media (max-width: 768px) {
     .about .wrapped {
         flex-direction: column;
@@ -337,11 +331,10 @@ nav .dropdown-content a {
         margin: auto; /* Center it horizontally */
     }
 
-    .about .keys {
-        width: 100%;
+    .about .stat {
         height: auto;
         margin-bottom: 20px;
-        order: 1;
+        order: 2;
     }
 
     .about .container {
@@ -349,7 +342,7 @@ nav .dropdown-content a {
         flex: 1;
         width: 80%; /* Adjust the width t\o a reasonable percentage */
         max-width: 600px; /* Keep the max\ width as it is */
-        order: 2;
+        order: 1;
     }
 }
 
