--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     padding: 0;
     overflow-x: hidden;
     width: 100%;
+    background-color: white;
 }
 
 ::selection {
@@ -141,6 +142,7 @@ nav .dropdown-content a {
     display: flex;
     place-items: center;
     justify-content: center;
+    text-align: center;
     height: 100%;
     position: relative;
     z-index: 2;
@@ -250,6 +252,8 @@ nav .dropdown-content a {
 }
 
 @media (max-width: 1075px) {
+
+    
     .takeaction .wrapper {
         flex-direction: column;
     }
@@ -259,6 +263,12 @@ nav .dropdown-content a {
 
     .infopicv {
         display: block; /* Show variant images */
+    }
+}
+
+@media (max-width: 768px){
+    .takeaction .title{
+        font-size: 1rem;
     }
 }
 
@@ -327,7 +337,7 @@ nav .dropdown-content a {
 
 .about p {
     color: black;
-    width: 400px;
+    width: 70%;
 }
 
 
@@ -353,6 +363,7 @@ nav .dropdown-content a {
         max-width: 600px; /* Keep the max\ width as it is */
         order: 1;
     }
+    
 }
 
 
@@ -427,7 +438,7 @@ nav .dropdown-content a {
 .sliding  {
     margin: auto;
     padding-top: 30px;
-    padding-bottom: 100px;
+    padding-bottom: 30px;
     box-sizing: border-box;
   }
 
@@ -516,6 +527,9 @@ nav .dropdown-content a {
     .sliding .logos-slide .container{
         width: fit-content;
     }
+    .sliding .logos-slide h1{
+        font-size: 2rem;
+      }
   }
 
 
@@ -524,8 +538,10 @@ nav .dropdown-content a {
     padding-bottom: 50px;
     background-color: white;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
 
 .quote .container{
     height: 100%;
@@ -547,6 +563,8 @@ nav .dropdown-content a {
 .quote .quotation{
     max-width: 70px;
 }
+
+
 
 /* Footer */
 footer {
